TestSuite/errors/err0419.pas
function f(i: integer): boolean;
begin
  
end;
begin
  while f do
    exit;
end.